<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteBackground"
    tools:context=".activity.Login">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_header_login1" />


    <ImageView
        android:id="@+id/footer_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/header_image"
        app:layout_constraintStart_toStartOf="@+id/header_image"
        app:srcCompat="@drawable/bg_footer_login" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_image">

        <TextView
            android:id="@+id/email_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:layout_marginStart="34dp"
            android:fontFamily="@font/font_gotham_medium"
            android:text="@string/login_email"
            android:textAllCaps="true"
            android:textColor="@color/colorTitleInputText"
            android:textSize="9sp"
            app:layout_constraintBottom_toTopOf="@id/email_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/email_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_textView">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/input_edittext"
                android:ems="10"
                android:fontFamily="@font/font_gotham_book"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_gotham_medium"
            android:text="@string/login_password"
            android:textAllCaps="true"
            android:textColor="@color/colorTitleInputText"
            android:textSize="9sp"
            app:layout_constraintStart_toStartOf="@+id/email_textView"
            app:layout_constraintTop_toBottomOf="@id/email_layout" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/email_layout"
            app:layout_constraintStart_toStartOf="@+id/email_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_textView"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGStart2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/input_edittext"
                android:ems="10"
                android:fontFamily="@font/font_gotham_book"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rucyc_button"
            android:fontFamily="@font/font_gotham_medium"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonWhiteText"
            app:layout_constraintEnd_toEndOf="@+id/password_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_layout" />

        <ProgressBar
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toTopOf="@+id/login_button" />

        <TextView
            android:id="@+id/register_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/font_gotham_book"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
